# dawnbuild

./: CMakeLists.txt
include/dawn/: dawn_proc_table.h  webgpu.h  webgpu_cpp.h  webgpu_cpp_print.h
include/dawn/wire/client/: webgpu.h  webgpu_cpp.h
lib/macOS/debug/: libdawn_platform.dylib  libdawn_platform.dylib.TOC  libwebgpu_dawn.dylib.TOC
lib/windows/debug/: libc++.lib  webgpu_dawn.lib
lib/windows/x64/debug/: dawn_platform.dll.lib  dawn_platform.lib  dawn_webgpu_dawn.dll.lib  libc++.lib  webgpu_dawn.lib
src/dawn/: webgpu_cpp.cpp
